Sponify final result

--- a/src/scss/abstract/_genClasses.scss
+++ b/src/scss/abstract/_genClasses.scss
@@ -14,52 +14,54 @@
       background-color: $color-white--2;
       transform: translateY(-3px);
     }
-  }
 
-  .result__basicInfos {
-    row-gap: 1rem;
-  }
+    &__ {
+      &basicInfos {
+        row-gap: 1rem;
+      }
 
-  .result__title {
-    font-size: 1.5rem;
-    text-transform: uppercase;
-    font-weight: 600;
-    white-space: nowrap;
-    @include titleStyle;
-  }
+      &title {
+        font-size: 1.5rem;
+        text-transform: uppercase;
+        font-weight: 600;
+        white-space: nowrap;
+        @include titleStyle;
+      }
 
-  .result__subTitle {
-    font-size: 1.2rem;
-    color: $color-grey-dark;
-    text-transform: uppercase;
-  }
+      &subTitle {
+        font-size: 1.2rem;
+        color: $color-grey-dark;
+        text-transform: uppercase;
+      }
 
-  .result__img {
-    display: inline-block;
-    width: 5rem;
-    height: 5rem;
-    border-radius: 50%;
-    background: linear-gradient($color-green--dark, $color-green--light);
-  }
+      &img {
+        display: inline-block;
+        width: 5rem;
+        height: 5rem;
+        border-radius: 50%;
+        background: linear-gradient($color-green--dark, $color-green--light);
+      }
 
-  .result__person__ctn {
-    position: relative;
-    width: 18rem;
-  }
+      &person__ctn {
+        position: relative;
+        width: 18rem;
+      }
 
-  .result__person {
-    position: absolute;
-    right: 0;
-    top: -30%;
-    width: 2.5rem;
-    height: 2.5rem;
-    background-color: $color-grey--2;
-    border-radius: 50%;
-    img {
-      width: 1.2rem;
-      height: 1.2rem;
-      margin-left: 0.3rem;
-      margin-top: -0.1rem;
+      &person {
+        position: absolute;
+        right: 0;
+        top: -30%;
+        width: 2.5rem;
+        height: 2.5rem;
+        background-color: $color-grey--2;
+        border-radius: 50%;
+        img {
+          width: 1.2rem;
+          height: 1.2rem;
+          margin-left: 0.3rem;
+          margin-top: -0.1rem;
+        }
+      }
     }
   }
 }
