--- a/src/scss/components/_recipe.scss
+++ b/src/scss/components/_recipe.scss
@@ -85,8 +85,23 @@
 
       &--list {
         list-style: none;
-        margin: 3.2rem 0;
+        margin: 3.2rem auto;
         gap: 2.6rem;
+        min-width: 70%;
+        max-width: 90%;
+        span {
+          font-size: 1.3rem;
+          line-height: 150%;
+        }
+
+        li {
+          column-gap: 0.8rem;
+
+          img {
+            width: 2.5rem;
+            height: 2.5rem;
+          }
+        }
       }
     }
 
